# entrance-exam-2022

./: .gitignore  .pre-commit-config.yaml  DEVELOP.md  Justfile  README.md  dev-requirements.txt  exam.ipynb  gen_sportsday.py  grade.py  pyproject.toml  requirements.txt  setup.cfg  sportsday.csv
.github/workflows/: project-test.yml
src/aibuilders_exam/: __init__.py  helpers.py
src/aibuilders_exam/grading/: engine.py  loader.py
src/nbnursery/: __init__.py  config.py  loader.py  testutils.py
