[project]
name = "aibuilders-exam"
version = "0.1.0"
description = "Simple Jupyter notebook grading library and command-line tools"
readme = "README.md"
requires-python = "~=3.7.1"
license = "Apache-2.0"

[[project.authors]]
name = "Abhabongse Janthong"
email = "6845502+abhabongse@users.noreply.github.com"

[[project.authors]]
name = "Nattapol Vannaboot"
email = "nattapol.vannaboot@gmail.com"

[tool.poetry]
name = "aibuilders-exam"
version = "0.1.0"
description = "Simple Jupyter notebook grading library and command-line tools"
readme = "README.md"
license = "Apache-2.0"
authors = [
    "Abhabongse Janthong <6845502+abhabongse@users.noreply.github.com>",
    "Nattapol Vannaboot <nattapol.vannaboot@gmail.com>",
]

[[tool.poetry.packages]]
include = "aibuilders_exam"
from = "src"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8.0"
click = "^8.0.0"
importlib-metadata = ">=4.2.0,<4.3"
inflect = "^5.4.0"
ipytest = "^0.12.0"
ipython = ">=7.31.1,<8.0"
jupyter-console = "^6.4.0"
jupyterlab = "^3.2.9"
more-itertools = "^8.12.0"
nbconvert = "^6.4.1"
numpy = ">=1.21.5,<1.22"
pandas = ">=1.3.5,<1.4"
pyairtable = "^1.1.0"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
rich = "^12.0.0"
tomli = "^2.0.0"
typing-extensions = "^4.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^6.3"
faker = "^13.3.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.1"
nbdime = "^3.1.1"
pycodestyle = "^2.8.0"
pyflakes = "^2.4.0"

[build-system]
requires = ["poetry==1.2.0a2"]
build-backend = "poetry.core.masonry.api"
